# veccat-statics-vec

./: Cargo.toml  README.md
benches/: alloc.rs
src/: lib.rs  main.rs
