[package]
name = "no_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name ="alloc"
harness = false

[dependencies]
password-hash = { version = "0.4.2" }
pbkdf2 = { git = "https://github.com/RustCrypto/password-hashes", features = ["simple"] }

[dev-dependencies]
criterion = "0.4"
